--- a/projects/android/Sample/app/src/main/res/values-pt/strings.xml
+++ b/projects/android/Sample/app/src/main/res/values-pt/strings.xml
@@ -20,6 +20,7 @@
     <string name="option_shared_data">Shared Data: O valor é %s</string>
     <string name="option_file_helper">File helper (tamanho do arquivo)</string>
     <string name="option_todo">Lista de ToDo</string>
+    <string name="option_web_server">Servidor web: %s</string>
     <string name="option_web_view">Navegador</string>
     <string name="search_hint">Pesquisar…</string>
     <string name="search_title">Pesquisar</string>
